--- a/css/style.css
+++ b/css/style.css
@@ -10016,12 +10016,6 @@ a.text-dark:hover, a.text-dark:focus {
   text-align: center;
 }
 
-head-return {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/return/pepi.jpg), no-repeat center center;
-  background-size: cover;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  margin: 0;
+.sin_negrita {
+  font-weight: normal;
 }
